# sgnl

./: .dockerignore  .env.dev  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ANALYTICS_IMPLEMENTATION.md  Dockerfile  README.md  README_TR.md  docker-compose.dev.yml  docker-compose.yml  init_analytics.py  pyproject.toml
.github/workflows/: ci.yml
.sisyphus/: boulder.json
.sisyphus/evidence/: task-1-json-valid.txt  task-1-minimax-removed.txt  task-10-docker-status.txt  task-10-pytest-results.txt  task-10-rate-limit-test.txt  task-10-rate-limit.txt  task-10-ratelimit.txt
.sisyphus/notepads/accessibility-verification/: accessibility-report.md
.sisyphus/notepads/sgnl-codebase-improvements/: learnings.md
.sisyphus/plans/: codebase-audit-report.md  country-risk-pipeline.md  retro-action-items.md  sgnl-codebase-improvements.md  sgnl-comprehensive-improvements.md  ui-design-improvements.md  update-opencode-models.md
app/: analytics_middleware.py  analytics_models.py  analytics_routes.py  analytics_utils.py  cache.py  config.py  extractor.py  main.py  models.py  rate_limiter.py  rate_limiter_interface.py  requirements.txt
app/cache/: __init__.py  redis_cache.py
app/security/: __init__.py  api_key.py  url_validator.py
app/services/: analyzer.py
app/static/css/: main.css
app/static/js/: analytics.js  main.js
app/templates/: index.html
app/tests/: conftest.py  test_analytics_heartbeat.py  test_analyzer.py  test_cache.py  test_extractor.py  test_main.py  test_mobile_layout.py  test_rate_limiter.py  test_scan_topic_timeout.py  test_security_headers.py
app/tests/security/: __init__.py  conftest.py  run_tests.py  test_api_key.py  test_url_validator.py
docs/: ANALYTICS.md  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  README.md  RETROSPECTIVE.md
